# tcgapi-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
tcgapi/: __init__.py  _transport.py  async_client.py  client.py  errors.py  models.py
tcgapi/resources/: _base.py  bulk.py  cards.py  export.py  games.py  keys.py  prices.py  search.py  sets.py  usage.py
tests/: test_smoke.py
